--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 		"cra-eject": "react-scripts eject",
 		"prettier": "prettier --write \"src/**/*.{ts,tsx,css}\"",
 		"tslint": "tslint --fix -c tslint.json -p tsconfig.json",
-		"test": "jest --verbose",
-		"test:watch": "jest --watchAll --verbose",
-		"test:coverage": "jest --verbose --coverage"
+		"test": "jest --verbose --updateSnapshot",
+		"test:watch": "jest --watchAll --verbose --updateSnapshot",
+		"test:coverage": "jest --verbose --coverage --updateSnapshot"
 	},
 	"dependencies": {
 		"react": "~16.8.2",
@@ -34,6 +34,7 @@
 		"@types/react-dom": "~16.8.2",
 		"enzyme": "~3.9.0",
 		"enzyme-adapter-react-16": "~1.9.1",
+		"enzyme-to-json": "~3.3.5",
 		"jest": "~23.6.0",
 		"prettier": "~1.16.4",
 		"react-scripts": "~2.1.5",
